# cmaketutorial

poco/: CMakeLists.txt  hellopoco.cpp
